--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@vueuse/core": "^13.8.0",
     "@vueuse/integrations": "^13.9.0",
     "axios": "^1.7.2",
+    "echarts": "^6.0.0",
     "maska": "^3.2.0",
     "pinia": "^2.1.7",
     "primevue": "^4.3.6",
     "universal-cookie": "^8.0.1",
     "vue": "^3.4.21",
+    "vue-echarts": "^8.0.1",
     "vue-i18n": "^11.1.10",
     "vue-router": "^4.3.2"
   },
